Fix plaintext overflow

--- a/core/static/css/site.css
+++ b/core/static/css/site.css
@@ -372,6 +372,7 @@ a.button-link--primary:hover {
 
 .markdown {
   overflow: auto;
+  padding: 0 1rem;
 }
 
 .markdown p,
@@ -695,6 +696,7 @@ a.badge--w3c {
   background: #2a2a2a;
   border-left: 1px solid #444;
   border-right: 1px solid #444;
+  overflow: hidden;
 }
 
 .schema-layout .schema-layout__extra {
@@ -720,10 +722,6 @@ a.badge--w3c {
   color: #fff;
 }
 
-.schema-detail {
-  padding: 1rem;
-}
-
 .schema-ref-detail {
   padding: 1rem;
   display: flex;
@@ -747,7 +745,7 @@ a.badge--w3c {
   white-space: pre-wrap;
 }
 
-.schema-detail .badges {
+.badges {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
